payload/workloads/documentation/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: documentation
  labels:
    name: documentation
    pod-security.kubernetes.io/enforce: restricted
