payload/workloads/documentation/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-docs
  namespace: documentation
  labels:
    app.kubernetes.io/name: homelab-docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homelab-docs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homelab-docs
    spec:
      containers:
        - name: homelab-docs
          image: ghcr.io/janwelker/homelab-docs:sha-bd1d752@sha256:9c0b1221db671f314b4ee67849f178cf035ed1c78e765e00e96b71c3493cba91
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 101
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
